--- a/InventoryManagement/Views/Shared/_Layout.cshtml
+++ b/InventoryManagement/Views/Shared/_Layout.cshtml
@@ -27,6 +27,25 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                     </li>
                 </ul>
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#authModal">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" 
+                         class="bi bi-box-arrow-in-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M6 3.5a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 
+            .5.5v9a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 
+            0-1 0v2A1.5 1.5 0 0 0 6.5 14h8a1.5 1.5 0 0 
+            0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-8A1.5 
+            1.5 0 0 0 5 3.5v2a.5.5 0 0 0 1 0z"/>
+                        <path fill-rule="evenodd" d="M11.854 8.354a.5.5 0 
+            0 0 0-.708l-3-3a.5.5 0 1 
+            0-.708.708L10.293 7.5H1.5a.5.5 0 
+            0 0 0 1h8.793l-2.147 
+            2.146a.5.5 0 0 0 .708.708z"/>
+                    </svg>
+                    Login
+                </button>
+
+
+                
             </div>
             
             
@@ -47,8 +66,36 @@
         &copy; 2025 - InventoryManagement - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
     </div>
 </footer>
+
+
+
+<div class="modal fade" id="authModal" tabindex="-1" aria-labelledby="authModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content rounded-4 shadow">
+            <div class="modal-header border-0">
+                <h5 class="modal-title" id="authModalLabel">Login</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body" id="authModalBody">
+                <div id="loginView">
+                    @Html.Partial("_LoginPartial")
+                </div>
+                <div id="registerView" class="d-none">
+                    @Html.Partial("_RegisterPartial")
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="~/js/authentication.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
 @await RenderSectionAsync("Scripts", required: false)
 </body>
