--- a/InventoryManagement/Views/Shared/_RegisterPartial.cshtml
+++ b/InventoryManagement/Views/Shared/_RegisterPartial.cshtml
@@ -1,15 +1,16 @@
 ﻿<form id="registerForm">
+    @Html.AntiForgeryToken()
     <div class="mb-3">
-        <label for="Email" class="form-label">Email</label>
-        <input type="email" class="form-control" id="Email" name="Email" required />
+        <label for="Username" class="form-label">Username</label>
+        <input type="text" class="form-control" id="Username" name="Username" required/>
     </div>
     <div class="mb-3">
         <label for="Password" class="form-label">Password</label>
-        <input type="password" class="form-control" id="Password" name="Password" required />
+        <input type="password" class="form-control" id="Password" name="Password" required/>
     </div>
     <div class="mb-3">
         <label for="ConfirmPassword" class="form-label">Confirm Password</label>
-        <input type="password" class="form-control" id="ConfirmPassword" name="ConfirmPassword" required />
+        <input type="password" class="form-control" id="ConfirmPassword" name="ConfirmPassword" required/>
     </div>
     <button type="submit" class="btn btn-success w-100 mb-3">Register</button>
 
@@ -19,3 +20,4 @@
         </small>
     </div>
 </form>
+
