--- a/InventoryManagement/Views/Shared/_Layout.cshtml
+++ b/InventoryManagement/Views/Shared/_Layout.cshtml
@@ -27,26 +27,43 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                     </li>
                 </ul>
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#authModal">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" 
-                         class="bi bi-box-arrow-in-right" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd" d="M6 3.5a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 
-            .5.5v9a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 
-            0-1 0v2A1.5 1.5 0 0 0 6.5 14h8a1.5 1.5 0 0 
-            0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-8A1.5 
-            1.5 0 0 0 5 3.5v2a.5.5 0 0 0 1 0z"/>
-                        <path fill-rule="evenodd" d="M11.854 8.354a.5.5 0 
-            0 0 0-.708l-3-3a.5.5 0 1 
-            0-.708.708L10.293 7.5H1.5a.5.5 0 
-            0 0 0 1h8.793l-2.147 
-            2.146a.5.5 0 0 0 .708.708z"/>
-                    </svg>
-                    Login
-                </button>
 
+                @if (User.Identity?.IsAuthenticated ?? false)
+                {
+                  
+                    <div class="d-flex align-items-center gap-2">
+                        <span class="fw-semibold text-dark">Hello, @User.Identity.Name!</span>
 
-                
+                        <form asp-controller="Login" asp-action="Logout" method="post" class="m-0">
+                            @Html.AntiForgeryToken()
+                            <button type="submit" class="btn btn-outline-danger btn-sm">
+                                <i class="bi bi-box-arrow-right"></i> Logout
+                            </button>
+                        </form>
+                    </div>
+                }
+                else
+                {
+                   
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#authModal">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" 
+                             class="bi bi-box-arrow-in-right" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M6 3.5a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 
+                    .5.5v9a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 
+                    0-1 0v2A1.5 1.5 0 0 0 6.5 14h8a1.5 1.5 0 0 
+                    0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-8A1.5 
+                    1.5 0 0 0 5 3.5v2a.5.5 0 0 0 1 0z"/>
+                            <path fill-rule="evenodd" d="M11.854 8.354a.5.5 0 
+                    0 0 0-.708l-3-3a.5.5 0 1 
+                    0-.708.708L10.293 7.5H1.5a.5.5 0 
+                    0 0 0 1h8.793l-2.147 
+                    2.146a.5.5 0 0 0 .708.708z"/>
+                        </svg>
+                        Login
+                    </button>
+                }
             </div>
+
             
             
             
