--- a/InventoryManagement/Views/Home/Index.cshtml
+++ b/InventoryManagement/Views/Home/Index.cshtml
@@ -49,8 +49,17 @@
     
 @* TODO MAKE THE FORMIT SUBMIT, CREATE A DB WITH NAME AND SPECIFIED FIELDS, FOR THAT FIRST SETUP CONNECTION TO THE DATABASE, ADD THE REQUIRED PACKAGES, ETC *@
 
-   
-    
+@model IEnumerable<InventoryManagement.Models.Inventory>
+<table>
+    @foreach (var i in Model)
+    {
+        <tr>
+            <td>@i.InventoryId</td>
+            <td>@i.NumofItems</td>
+            <td>@i.CreatedAt</td>
+        </tr>
+    }
+</table>
 
 
 
