--- a/InventoryManagement/Views/Shared/_Layout.cshtml
+++ b/InventoryManagement/Views/Shared/_Layout.cshtml
@@ -26,6 +26,16 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                     </li>
+                    
+                    @if (User.Identity?.IsAuthenticated ?? false)
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Personal" asp-action="Index">Personal</a>
+                        </li>
+                    }
+                   
+                    
+                    
                 </ul>
 
                 @if (User.Identity?.IsAuthenticated ?? false)
