--- a/InventoryManagement/Views/Admin/Index.cshtml
+++ b/InventoryManagement/Views/Admin/Index.cshtml
@@ -2,6 +2,31 @@
     ViewData["Title"] = "Admin Page";
 }
 
+<h1>Hey</h1>
+
+
+
+<table class="table">
+    <thead>
+    <tr>
+        <th scope="col"><input class="form-check-input mt-0" type="checkbox" value="" aria-label="Checkbox for user selection"></th>
+        <th scope="col">Username</th>
+        <th scope="col">Inventories Created</th>
+        <th scope="col">Is Admin?</th>
+        <th scope="col">Registered On</th>
+       
+    </tr>
+    </thead>
+    <tbody id="table-newest-body">
+    <tr>
+        <td class="col-5">
+            Loading...
+        </td>
+    </tr>
+
+    </tbody>
+</table>
+<button type="button" class="btn btn-primary">Update</button>
 
 @* TODO The admin page allows user management, including: viewing, blocking, unblocking, deleting users, adding users to the admin role, and removing them from it. *@
 @* *@
