--- a/InventoryManagement/Views/Shared/_Layout.cshtml
+++ b/InventoryManagement/Views/Shared/_Layout.cshtml
@@ -33,7 +33,12 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Personal" asp-action="Index">Personal</a>
                         </li>
                     }
-                   
+                    @if (User.Identity?.IsAuthenticated ?? false)
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Index">Admin</a>
+                        </li>
+                    }
                     
                     
                 </ul>
