home controller, get latest/popular inventories done, need to test

--- a/InventoryManagement/Views/Home/Index.cshtml
+++ b/InventoryManagement/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
 </div>
 
 
-    
+<h2>Latest Inventories</h2>
 <table class="table">
     <thead>
     <tr>
@@ -29,7 +29,20 @@
 @* TODO MAKE THE FORMIT SUBMIT, CREATE A DB WITH NAME AND SPECIFIED FIELDS, FOR THAT FIRST SETUP CONNECTION TO THE DATABASE, ADD THE REQUIRED PACKAGES, ETC *@
 
 
-
+<h2>Popular Inventories</h2>
+<table class="table">
+    <thead>
+    <tr>
+        <th scope="col">Inventory ID</th>
+        <th scope="col">User ID</th>
+        <th scope="col">Number Of Items</th>
+       
+    </tr>
+    </thead>
+    <tbody id="table-newest-body2">
+    
+    </tbody>
+</table>
 
 
 
