WOrking on admin page

--- a/InventoryManagement/Views/Admin/Index.cshtml
+++ b/InventoryManagement/Views/Admin/Index.cshtml
@@ -2,14 +2,14 @@
     ViewData["Title"] = "Admin Page";
 }
 
-<h1>Hey</h1>
+<h1>Admin Panel</h1>
 
-
-
+BUTTONS IN A LINE HERE
+@* TODO The admin page allows user management, including: viewing, blocking, unblocking, deleting users, adding users to the admin role, and removing them from it. *@
 <table class="table">
     <thead>
     <tr>
-        <th scope="col"><input class="form-check-input mt-0" type="checkbox" value="" aria-label="Checkbox for user selection"></th>
+        <th scope="col"><input class="form-check-input mt-0" type="checkbox" value="" aria-label="Checkbox for user selection" id="main-checkbox"></th>
         <th scope="col">Username</th>
         <th scope="col">Inventories Created</th>
         <th scope="col">Is Admin?</th>
@@ -17,16 +17,17 @@
        
     </tr>
     </thead>
-    <tbody id="table-newest-body">
-    <tr>
-        <td class="col-5">
-            Loading...
-        </td>
-    </tr>
+    <tbody id="users-body">
+  
 
     </tbody>
 </table>
 <button type="button" class="btn btn-primary">Update</button>
+
+
+@section Scripts{
+    <script src="~/js/adminScripts.js"></script>
+}
 
 @* TODO The admin page allows user management, including: viewing, blocking, unblocking, deleting users, adding users to the admin role, and removing them from it. *@
 @* *@
