admin panels only available to admins

--- a/InventoryManagement/Views/Shared/_Layout.cshtml
+++ b/InventoryManagement/Views/Shared/_Layout.cshtml
@@ -33,7 +33,8 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Personal" asp-action="Index">Personal</a>
                         </li>
                     }
-                    @if (User.Identity?.IsAuthenticated ?? false)
+                    @if (User?.Identity?.IsAuthenticated == true 
+                         && User.HasClaim(c => c is { Type: "isAdmin", Value: "True" }))
                     {
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Index">Admin</a>
