--- a/InventoryManagement/Views/Home/Index.cshtml
+++ b/InventoryManagement/Views/Home/Index.cshtml
@@ -37,6 +37,115 @@
 
 
 
+
+
+<h2>Table Name</h2>
+<ul class="nav nav-tabs" id="myTab" role="tablist">
+    <li class="nav-item" role="presentation">
+        <button class="nav-link active" id="items-tab" data-bs-toggle="tab" data-bs-target="#items" type="button" role="tab">Items</button>
+    </li>
+    <li class="nav-item" role="presentation">
+        <button class="nav-link" id="chat-tab" data-bs-toggle="tab" data-bs-target="#chat" type="button" role="tab">Chat</button>
+    </li>
+    <li class="nav-item" role="presentation">
+        <button class="nav-link" id="settings-tab" data-bs-toggle="tab" data-bs-target="#settings" type="button" role="tab" >Settings</button>
+    </li>
+    <li class="nav-item" role="presentation">
+        <button class="nav-link" id="custom-id-tab" data-bs-toggle="tab" data-bs-target="#custom-id" type="button" role="tab" >Custom ID</button>
+    </li>
+    <li class="nav-item" role="presentation">
+        <button class="nav-link" id="fields-tab" data-bs-toggle="tab" data-bs-target="#fields" type="button" role="tab" >Fields</button>
+    </li>
+    <li class="nav-item" role="presentation">
+        <button class="nav-link" id="access-tab" data-bs-toggle="tab" data-bs-target="#access" type="button" role="tab" >Access</button>
+    </li>
+    <li class="nav-item" role="presentation">
+        <button class="nav-link" id="stats-tab" data-bs-toggle="tab" data-bs-target="#stats" type="button" role="tab" >Stats</button>
+    </li>
+    <li class="nav-item" role="presentation">
+        <button class="nav-link" id="export-tab" data-bs-toggle="tab" data-bs-target="#export" type="button" role="tab" >Export</button>
+    </li>
+</ul>
+<div class="tab-content" id="myTabContent">
+    <div class="tab-pane fade show active" id="items" role="tabpanel">1</div>
+    <div class="tab-pane fade" id="chat" role="tabpanel">2</div>
+    <div class="tab-pane fade" id="settings" role="tabpanel">3</div>
+    <div class="tab-pane fade" id="custom-id" role="tabpanel">
+        
+        <p class="p-2">
+            <small class="d-block">You can set up items with inventory numbers in your preferred format.</small>
+            <small>To create a format, add new elements, edit them, drag to reorder, or drag elements out of the form to delete them</small>
+        </p>
+        
+
+        <p class="m-2">Example: 
+            <strong id="custom-id-value">UNIQUE ID</strong>
+            </p>
+        
+        <ul class="list-group">
+            <li class="list-group-item" id="element-to-add">
+                
+                <div class="d-flex flex-row">
+                    <div class="input-group m-2">
+                        <span class="input-group-text" id="basic-addon1">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-up" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M11.5 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L11 2.707V14.5a.5.5 0 0 0 .5.5m-7-14a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L4 13.293V1.5a.5.5 0 0 1 .5-.5"/>
+                            </svg></span>
+                        <select class="form-select">
+                            <option selected>Fixed</option>
+                            <option value="20bit">20-bit random number</option>
+                            <option value="32bit">32-bit random number</option>
+                            <option value="6digitrand">6-digit random number</option>
+                            <option value="9digitrand">9-digit random number</option>
+                            <option value="guid">GUID</option>
+                            <option value="datetime">Date/time</option>
+                            <option value="sequence">Sequence</option>
+                        </select>
+                    </div>
+
+
+                    <div class="input-group m-2">
+
+                        <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+                        <button class="input-group-text" id="emojis">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-emoji-smile" viewBox="0 0 16 16">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
+                                <path d="M4.285 9.567a.5.5 0 0 1 .683.183A3.5 3.5 0 0 0 8 11.5a3.5 3.5 0 0 0 3.032-1.75.5.5 0 1 1 .866.5A4.5 4.5 0 0 1 8 12.5a4.5 4.5 0 0 1-3.898-2.25.5.5 0 0 1 .183-.683M7 6.5C7 7.328 6.552 8 6 8s-1-.672-1-1.5S5.448 5 6 5s1 .672 1 1.5m4 0c0 .828-.448 1.5-1 1.5s-1-.672-1-1.5S9.448 5 10 5s1 .672 1 1.5"/>
+                            </svg></button>
+                        <button class="input-group-text">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-question-circle" viewBox="0 0 16 16">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
+                                <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286m1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94"/>
+                            </svg></button>
+                    </div>
+
+                </div>
+
+            </li>
+            
+        </ul>
+
+     
+
+
+
+
+
+        <button type="button" class="btn btn-primary" id ="add-element-btn">Add Element</button>
+        
+    </div>
+    <div class="tab-pane fade" id="fields" role="tabpanel">5</div>
+    <div class="tab-pane fade" id="access" role="tabpanel">6</div>
+    <div class="tab-pane fade" id="stats" role="tabpanel">7</div>
+    <div class="tab-pane fade" id="export" role="tabpanel">8</div>
+</div>
+
+
+
+
+
+
+
 @section Scripts {
     <script src="~/js/homeScripts.js"></script>
     
