Continue on table creation

--- a/InventoryManagement/Views/Personal/InventoryCreationPartial.cshtml
+++ b/InventoryManagement/Views/Personal/InventoryCreationPartial.cshtml
@@ -25,9 +25,11 @@
                         id="field-type-1"
                         name="Fields[0].Type">
                     <option value="" selected disabled>Type</option>
-                    <option value="string">String</option>
-                    <option value="integer">Integer</option>
-                    <option value="boolean">Boolean</option>
+                    <option value="string-single">Single Line</option>
+                    <option value="string-multi">Multi Line</option>
+                    <option value="float">Numeric</option>
+                    <option value="boolean">Checkbox</option>
+                    <option value="link">Document/Image (Entered As A Link)</option>
                 </select>
             </div>
         </div>
