--- a/InventoryManagement/Views/Home/Index.cshtml
+++ b/InventoryManagement/Views/Home/Index.cshtml
@@ -7,8 +7,8 @@
 <table class="table">
     <thead>
     <tr>
-        <th scope="col">Inventory ID</th>
-        <th scope="col">User ID</th>
+        <th scope="col">Inventory Name</th>
+        <th scope="col">Username</th>
         <th scope="col">Number Of Items</th>
        
     </tr>
@@ -24,8 +24,8 @@
 <table class="table">
     <thead>
     <tr>
-        <th scope="col">Inventory ID</th>
-        <th scope="col">User ID</th>
+        <th scope="col">Inventory Name</th>
+        <th scope="col">Username</th>
         <th scope="col">Number Of Items</th>
        
     </tr>
