personal inventory view

--- a/InventoryManagement/Views/Personal/Index.cshtml
+++ b/InventoryManagement/Views/Personal/Index.cshtml
@@ -18,12 +18,15 @@
 
 
 
-
+<table class="table" id="owned-inventories">
+ 
+</table>
 
 
 
 @section Scripts {
     <script src="~/js/inventoryCreation.js"></script>
+    <script src="~/js/personalScripts.js"></script>
 }
 
 
