fix personal view, need to add inventory navigation

--- a/InventoryManagement/Views/Personal/Index.cshtml
+++ b/InventoryManagement/Views/Personal/Index.cshtml
@@ -15,12 +15,9 @@
     @await Html.PartialAsync("InventoryCreationPartial")
 </div>
 
-
-
-
-<table class="table" id="owned-inventories">
+<div id="owned-inventories">
  
-</table>
+</div>
 
 
 
